<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/fondo"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="400sp"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:background="@drawable/round_border"
        android:layout_marginBottom="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginEnd="30sp"
            android:text="@string/TituloCrear" />
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:background="@drawable/person_profile"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/viewNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:text="@string/hint_nombre" />

        <EditText
            android:id="@+id/txtNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:text="@string/hint_apellido" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewNombre"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:text="@string/hint_telefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/black"
            android:labelFor="@+id/viewTelefono"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:text="@string/hint_Dni" />

        <EditText
            android:id="@+id/txtDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="number"
            android:labelFor="@+id/viewDni"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:text="@string/hint_correo_electronico" />

        <EditText
            android:id="@+id/txtCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="30sp"
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewCorreo"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_border"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:onClick="registrarUsuario"
            android:layout_marginBottom="20sp"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>